examples/services/sidecar/flux-restful/aws/ingress.yaml
apiVersion: v1
kind: Service
metadata:
  name: restful-service
spec:
  type: NodePort
  ports:
  - port: 30093
    targetPort: 5000
  selector:
    job-index: "0"
    job-name: flux-sample
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: restful-ingress
  annotations:     
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/scheme: internet-facing
spec:
  ingressClassName: alb
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: restful-service
            port: 
              number: 30093
